--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -1,1 +1,119 @@
-a
+unit.dagger.name = Dagger-chan
+unit.dagger.description = Likes to be alone sometimes. Shy.
+unit.dagger.details = "U-um..... H-hello there."
+unit.mace.name = Mace-chan
+unit.mace.description = Has a flamethrower for some reason. Insecure. Uses her flamethrower when someone gets too close. Is particuarly nice when you become her friend.
+unit.mace.details = "!"\n"Stay back or i'll burn you!"
+unit.fortress.name = Fortress-kun
+unit.fortress.description = A shining soldier that always wears sunglasses, even while asleep. Takes daily walks at Ruinous Shores and randomly fires at walls.
+unit.fortress.details = "You better get some turrets that can actually see me, dipshit."
+unit.scepter.name = Scepter-kun
+unit.scepter.description = Muscular fighter from the frigid depths of Stained Mountains. Has enough arm strength to dual-wield his gigantic cannons, but can't run for shit.
+unit.scepter.details = "You lookin' for a fight?"
+unit.reign.name = Reign-sama
+unit.reign.description = The great overlord of machines. Her weapons pulverise everything in their path. Don't even try to agitate her, or else you will be shot until you're a pile of scrap.
+unit.reign.details = "Make it quick and snappy. I'm pissed today."
+unit.crawler.name = Crawler-chan
+unit.crawler.description = Partially insane, partially hyper, always cute and huggable. She has killed god several times.
+unit.crawler.details = "Hugs? Hugs? HUGS? Hug meeeeeeeeeee!!!!!!!!!!!!!!!!!!!!!"
+unit.atrax.name = Atrax-kun
+unit.atrax.description = A rebellious vandal that loves to commit arson with Mace-chan. 
+unit.atrax.details = "A coal line? C'mon Mace, we gotta burn that down!"
+unit.spiroct.name = Spiroct-san
+unit.spiroct.description = The overseer of Biomass Synthesis Facility. After the incident, she wandered the facility for years and now seeks your group for purpose.
+unit.spiroct.details = "You want me to fight that guy over there? You silly fool, that's mere crawler's play."
+unit.arkyid.name = Arkyid-san
+unit.arkyid.description = The guardian spider of Overgrowth. She's rather silent and shy, but her sapping teeth can dent even the heaviest enemies. Has a fondness towards Vela.
+unit.arkyid.details = "Oh... hey. What's up?"
+unit.toxopid.name = Toxo-sama
+unit.toxopid.description = The true queen of all spiders. Dominator of all units.
+unit.toxopid.details = "Ara ara, Gamma-kun~"
+unit.nova.name = Nova-kun
+unit.nova.description = Simple long-range fighter. Considers himself superior to Dagger-chan in every single way. Often crashes himself into walls due to booster legs.
+unit.nova.details = "ohnoohnoohnooHgODOHFUCKAWALLAAAAAAAAAAAAAAAAAAAaa"
+unit.pulsar.name = Pulsar-chan
+unit.pulsar.description = Shockingly joyous. Runs track and field on weekends.
+unit.pulsar.details = "Oh for god's sake, I'm not just an arc with legs, Horizon! I can build and heal!"
+unit.quasar.name = Quasar-kun
+unit.quasar.description = Hides under his force projector blanket when frightened. Frightened by many things.
+unit.quasar.details = "coast all clear? please..? no..?"
+unit.vela.name = Vela-san
+unit.vela.description = The patrolling guardian of Tar Fields. Wields a piercing laser that incinerates everything. Likes Arkyid.
+unit.vela.details = "Arky~~~~ Arky! There's a wild Scepter, I can't get to those walls!"
+unit.corvus.name = Corvus-kun
+unit.corvus.description = An infamous sniper whose penetrating firearm devastates buildings. Lacking any emotion from years of bloodshed, he only has one wish.
+unit.corvus.details = "Sector 24... will it give me what I've always wanted..?"
+unit.mono.name = Mono-chan
+unit.mono.description = Energetic, productive and kind labourer. Probably hardline communist.
+unit.mono.details = "The struggles of the lower tiers will finally be known!"
+unit.poly.name = Poly-chan
+unit.poly.description = Your maid that will rebuild buildings.
+unit.poly.details = "Poly-chan at your service~!"
+unit.mega.name = Mega-san
+unit.mega.description = A hardworking builder, constantly overworked by calls to repair damages.
+unit.mega.details = "Another one? It's the 50th crack in the wall today, you have menders!"
+unit.quad.name = Quad-san
+unit.quad.description = A bomber that often floats around and lazes about, but gets extremely energetic at destroying bases."
+unit.quad.details = "Oh, you want that little base there gone? Hell yeah."
+unit.oct.name = Oct-sama
+unit.oct.description = The guardian angel. The goddess of worship and protection.
+unit.oct.details = "Come, this is no place to die!"
+unit.flare.name = Flare-kun
+unit.flare.description = Underpaid delivery worker that shares his struggles with Mono.
+unit.flare.details = "I agree, our struggles are absolutely insane! They expect me to carry one more bit of silicon?"
+unit.horizon.name = Horizon-chan
+unit.horizon.description = Speedy bomber that likes to juggle. A student under Quad-san.
+unit.horizon.details = Quad, wake the fuck up.
+unit.zenith.name = Zenith-chan
+unit.zenith.description = A Zenith that's too addicted to video games.
+unit.zenith.details = "Oh come on, I'm almost at grandmaster league in Starcraft 2! I just need to grind a few more games, it'll only take a few hours! I’ll do it on the way to The Craters!"
+unit.antumbra.name = Antumbra-san
+unit.antumbra.description = A powerful flagship that sold Tar Fields Resort for a peaceful life in Impact 0078.
+unit.antumbra.details = "Oh yeah, I need a stable silicon income for a food bill? Whatever, ships don't even need to eat."
+unit.eclipse.name = Eclipse-sama
+unit.eclipse.description = An ancient, dormant being awakened in the Nuclear Production Complex. Still struggling to get her wings up.
+unit.eclipse.details = "oct uhh im just gonna stay in the snow for another 20 hours you continue on ahead"
+unit.risso.name = Risso-chan
+unit.risso.description = Aquatic variant of a duo. Likes to pretend to be a dolphin, much to the disappointment of Minke.
+unit.risso.details = "hey did you know that dolphins have an iq of around 3.3, which is more that you"
+unit.minke.name = Minke-chan
+unit.minke.description = Gunboat girl that loves to tear down random buildings. Recently had her overclock generator stolen.
+unit.minke.details = "Yeah, baby! Crash dive!"
+unit.bryde.name = Bryde-chan
+unit.bryde.description = Hailing from Windswept Islands and its little plastanium farm, she is very unfamiliar to the urbanism practices of Sharded. Great friends with Cyerce.
+unit.bryde.details = "So you call these highways? Made of routers? That’s… really inefficient.”
+unit.sei.name = Sei-kun
+unit.sei.description = The mysterious captain of Sei-class destroyers. Has been spotted brawling Arkyid with success.
+unit.sei.details = "There's only one rule out on the sea. The one with less guns goes under."
+unit.omura.name = Omura-sama
+unit.omura.description = Caretaker of Flare, wielder of the hyper-powerful anti-structural Foreshadow variant.
+unit.omura.details = "You two, crash straight into that wall and see if the turrets do anything."
+unit.alpha.name = Alpha-san
+unit.alpha.description = It's you. The commander of Sharded. Lead your forces to victory with your harem of cute girls and cool guys.
+unit.alpha.details = "Nice to meet you, Dagger! I should probably say farewell too."
+unit.beta.name = Beta-san
+unit.beta.description = It's you, the commander of Sharded, now with shinier gear to bully enemy Flares.
+unit.beta.details = "Are you kidding me? 75% build speed? This project's gonna take eons to make!"
+unit.gamma.name = Gamma-san
+unit.gamma.description = The greatest commander of Sharded, besting thousands of trials and earning promotions to pilot a shitty Glaive ripoff.
+unit.gamma.details = "I am the queen of sharded, why can't anyone just bloody listen!"
+unit.retusa.name = Retusa-kun
+unit.retusa.description = A creative little boat that often plants trails of mines to draw.
+unit.retusa.details = "You can draw dicks? Epic."
+unit.oxynoe.name = Oxynoe-kun
+unit.oxynoe.description = A unique boat that can eliminate oncoming bullets. A master baseball fielder.
+unit.oxynoe.details = "You're putting me at the front to stop that ripple?"
+unit.cyerce.name = Cyerce-chan
+unit.cyerce.description = Lime flavoured boat. Very, v e r y good friends with Bryde.
+unit.cyerce.details = "I taste like a lime? How do you even eat steel? What's a lime?"
+unit.aegires.name = Aegires-san
+unit.aegires.description = A flexible support ship that suppresses enemy activity using a charged pendant.
+unit.aegires.details = "Death ball incoming!”
+unit.navanax.name = Navanax-san
+unit.navanax.description = The ship that's just done with life.
+unit.navanax.details = "Disable Foreshadows? Again? Why did you make me do this! I’m fighting just so commanders like you constantly die and respawn! Think, Gamma, think! Your recklessness will cause every little thing on this planet to crumble and blow away by the wind! What will you have after 500 waves?!"
+
+# UI
+stat.description = Details
+stat.itemcapacity = Pocket Size
+stat.size = Size [gray](Thiccness for girls)[]
